--- a/public/output-style.css
+++ b/public/output-style.css
@@ -557,76 +557,12 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.order-2 {
-  order: 2;
-}
-
-.order-1 {
-  order: 1;
-}
-
-.order-3 {
-  order: 3;
-}
-
-.order-4 {
-  order: 4;
-}
-
-.order-5 {
-  order: 5;
-}
-
 .order-6 {
   order: 6;
 }
 
-.order-7 {
-  order: 7;
-}
-
-.mt-9 {
-  margin-top: 2.25rem;
-}
-
-.mt-\[5\.25rem\] {
-  margin-top: 5.25rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.mt-\[1\.85rem\] {
-  margin-top: 1.85rem;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
-.mt-\[0\.6rem\] {
-  margin-top: 0.6rem;
-}
-
-.mt-\[4\.4rem\] {
-  margin-top: 4.4rem;
-}
-
 .mt-\[7\.6rem\] {
   margin-top: 7.6rem;
-}
-
-.mt-6 {
-  margin-top: 1.5rem;
-}
-
-.mb-20 {
-  margin-bottom: 5rem;
 }
 
 .flex {
@@ -637,32 +573,12 @@ video {
   display: grid;
 }
 
-.hidden {
-  display: none;
-}
-
-.h-auto {
-  height: auto;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
 .h-8 {
   height: 2rem;
 }
 
 .min-h-screen {
   min-height: 100vh;
-}
-
-.w-14 {
-  width: 3.5rem;
-}
-
-.w-full {
-  width: 100%;
 }
 
 .w-8 {
@@ -673,24 +589,8 @@ video {
   cursor: pointer;
 }
 
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-
-.flex-col {
-  flex-direction: column;
-}
-
-.items-center {
-  align-items: center;
-}
-
 .gap-5 {
   gap: 1.25rem;
-}
-
-.place-self-start {
-  place-self: start;
 }
 
 .rounded-full {
@@ -701,22 +601,8 @@ video {
   border-width: 2px;
 }
 
-.border-gray {
-  --tw-border-opacity: 1;
-  border-color: hsl(0 0% 59% / var(--tw-border-opacity));
-}
-
 .border-opacity-20 {
   --tw-border-opacity: 0.2;
-}
-
-.bg-blue {
-  --tw-bg-opacity: 1;
-  background-color: hsl(223 87% 63% / var(--tw-bg-opacity));
-}
-
-.fill-blue {
-  fill: hsl(223, 87%, 63%);
 }
 
 .object-center {
@@ -726,80 +612,6 @@ video {
 
 .p-\[0\.35rem\] {
   padding: 0.35rem;
-}
-
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
-
-.px-\[1\.9rem\] {
-  padding-left: 1.9rem;
-  padding-right: 1.9rem;
-}
-
-.pl-8 {
-  padding-left: 2rem;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.text-\[1\.35rem\] {
-  font-size: 1.35rem;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.font-300 {
-  font-weight: 300;
-}
-
-.font-700 {
-  font-weight: 700;
-}
-
-.italic {
-  font-style: italic;
-}
-
-.text-gray {
-  --tw-text-opacity: 1;
-  color: hsl(0 0% 59% / var(--tw-text-opacity));
-}
-
-.text-veryDarkBlue {
-  --tw-text-opacity: 1;
-  color: hsl(209 33% 12% / var(--tw-text-opacity));
-}
-
-.text-lightRed {
-  --tw-text-opacity: 1;
-  color: hsl(354 100% 66% / var(--tw-text-opacity));
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: hsl(0 100% 100% / var(--tw-text-opacity));
-}
-
-.text-opacity-80 {
-  --tw-text-opacity: 0.8;
-}
-
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.drop-shadow-lg {
-  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition-all {
@@ -813,16 +625,17 @@ html {
 }
 
 body {
-  font-family: 'Libre Franklin', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 1.25rem;
 }
 
-.invalid-form {
-  border-color: hsl(354, 100%, 66%);
-}
-
-.hidden {
-  display: none;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Poppins', sans-serif;
 }
 
 .attribution {
@@ -846,190 +659,12 @@ body {
   color: hsl(287, 70%, 91%);
 }
 
-.placeholder\:text-xs::-moz-placeholder {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.placeholder\:text-xs::placeholder {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.placeholder\:text-gray::-moz-placeholder {
-  --tw-text-opacity: 1;
-  color: hsl(0 0% 59% / var(--tw-text-opacity));
-}
-
-.placeholder\:text-gray::placeholder {
-  --tw-text-opacity: 1;
-  color: hsl(0 0% 59% / var(--tw-text-opacity));
-}
-
-.placeholder\:text-opacity-50::-moz-placeholder {
-  --tw-text-opacity: 0.5;
-}
-
-.placeholder\:text-opacity-50::placeholder {
-  --tw-text-opacity: 0.5;
-}
-
-.hover\:bg-blue:hover {
-  --tw-bg-opacity: 1;
-  background-color: hsl(223 87% 63% / var(--tw-bg-opacity));
-}
-
 .hover\:fill-white:hover {
   fill: hsl(0, 100%, 100%);
 }
 
-.hover\:opacity-80:hover {
-  opacity: 0.8;
-}
-
-.focus\:border-blue:focus {
-  --tw-border-opacity: 1;
-  border-color: hsl(223 87% 63% / var(--tw-border-opacity));
-}
-
-.focus\:outline-none:focus {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
-.focus\:ring-1:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-blue:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: hsl(223 87% 63% / var(--tw-ring-opacity));
-}
-
 @media (min-width: 768px) {
-  .md\:row-start-2 {
-    grid-row-start: 2;
-  }
-
-  .md\:mt-\[3\.8rem\] {
-    margin-top: 3.8rem;
-  }
-
-  .md\:mt-3 {
-    margin-top: 0.75rem;
-  }
-
-  .md\:mt-\[2\.5rem\] {
-    margin-top: 2.5rem;
-  }
-
-  .md\:mt-0 {
-    margin-top: 0px;
-  }
-
-  .md\:mb-0 {
-    margin-bottom: 0px;
-  }
-
   .md\:mt-\[3rem\] {
     margin-top: 3rem;
-  }
-
-  .md\:mt-5 {
-    margin-top: 1.25rem;
-  }
-
-  .md\:h-\[3\.4rem\] {
-    height: 3.4rem;
-  }
-
-  .md\:w-\[5\.38rem\] {
-    width: 5.38rem;
-  }
-
-  .md\:max-w-3xl {
-    max-width: 48rem;
-  }
-
-  .md\:max-w-2xl {
-    max-width: 42rem;
-  }
-
-  .md\:max-w-xl {
-    max-width: 36rem;
-  }
-
-  .md\:max-w-lg {
-    max-width: 32rem;
-  }
-
-  .md\:max-w-5xl {
-    max-width: 64rem;
-  }
-
-  .md\:grid-cols-\[1fr_auto\] {
-    grid-template-columns: 1fr auto;
-  }
-
-  .md\:gap-3 {
-    gap: 0.75rem;
-  }
-
-  .md\:place-self-center {
-    place-self: center;
-  }
-
-  .md\:justify-self-center {
-    justify-self: center;
-  }
-
-  .md\:px-16 {
-    padding-left: 4rem;
-    padding-right: 4rem;
-  }
-
-  .md\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-
-  .md\:pl-8 {
-    padding-left: 2rem;
-  }
-
-  .md\:text-start {
-    text-align: start;
-  }
-
-  .md\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
-  .md\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
-  .md\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-
-  .md\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
-  .placeholder\:md\:text-lg::-moz-placeholder {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-
-  .placeholder\:md\:text-lg::placeholder {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
   }
 }
