--- a/src/input-style.css
+++ b/src/input-style.css
@@ -7,16 +7,17 @@ html {
 }
 
 body {
-  font-family: 'Libre Franklin', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 1.25rem;
 }
 
-.invalid-form {
-  border-color: hsl(354, 100%, 66%);
-}
-
-.hidden {
-  display: none;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Poppins', sans-serif;
 }
 
 .attribution {
