--- a/public/output-style.css
+++ b/public/output-style.css
@@ -579,12 +579,12 @@ video {
   margin-right: 3.3rem;
 }
 
-.mt-\[2rem\] {
-  margin-top: 2rem;
+.mt-\[1\.95rem\] {
+  margin-top: 1.95rem;
 }
 
-.mb-\[3\.65rem\] {
-  margin-bottom: 3.65rem;
+.mb-\[1\.2rem\] {
+  margin-bottom: 1.2rem;
 }
 
 .mb-\[3\.85rem\] {
@@ -599,52 +599,8 @@ video {
   margin-top: 1.45rem;
 }
 
-.mt-\[1\.95rem\] {
-  margin-top: 1.95rem;
-}
-
-.mb-\[3\.4rem\] {
-  margin-bottom: 3.4rem;
-}
-
-.mb-\[3\.2rem\] {
-  margin-bottom: 3.2rem;
-}
-
-.mb-\[3rem\] {
-  margin-bottom: 3rem;
-}
-
-.mb-\[2\.5rem\] {
-  margin-bottom: 2.5rem;
-}
-
-.mb-\[2rem\] {
-  margin-bottom: 2rem;
-}
-
-.mb-\[2\.2rem\] {
-  margin-bottom: 2.2rem;
-}
-
-.mb-\[2\.3rem\] {
-  margin-bottom: 2.3rem;
-}
-
-.mb-7 {
-  margin-bottom: 1.75rem;
-}
-
-.mb-\[1\.5rem\] {
-  margin-bottom: 1.5rem;
-}
-
 .mb-\[1\.4rem\] {
   margin-bottom: 1.4rem;
-}
-
-.mb-\[1\.2rem\] {
-  margin-bottom: 1.2rem;
 }
 
 .grid {
@@ -679,24 +635,12 @@ video {
   cursor: pointer;
 }
 
-.grid-flow-row {
-  grid-auto-flow: row;
-}
-
 .grid-flow-col {
   grid-auto-flow: column;
 }
 
 .auto-rows-auto {
   grid-auto-rows: auto;
-}
-
-.justify-start {
-  justify-content: flex-start;
-}
-
-.gap-\[1rem\] {
-  gap: 1rem;
 }
 
 .gap-\[0\.5rem\] {
@@ -724,10 +668,6 @@ video {
   border-color: hsl(0 100% 100% / var(--tw-border-opacity));
 }
 
-.border-opacity-20 {
-  --tw-border-opacity: 0.2;
-}
-
 .border-opacity-60 {
   --tw-border-opacity: 0.6;
 }
@@ -742,13 +682,18 @@ video {
   background-color: hsl(0 100% 100% / var(--tw-bg-opacity));
 }
 
-.bg-softMagenta {
-  --tw-bg-opacity: 1;
-  background-color: hsl(300 69% 71% / var(--tw-bg-opacity));
-}
-
 .fill-white {
   fill: hsl(0, 100%, 100%);
+}
+
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.object-left-top {
+  -o-object-position: left top;
+     object-position: left top;
 }
 
 .object-center {
@@ -769,9 +714,9 @@ video {
   text-align: center;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
 }
 
 .text-base {
@@ -784,16 +729,17 @@ video {
   line-height: 1rem;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .font-600 {
   font-weight: 600;
 }
 
 .leading-\[2\.1rem\] {
   line-height: 2.1rem;
-}
-
-.leading-\[2\.2rem\] {
-  line-height: 2.2rem;
 }
 
 .text-white {
@@ -812,10 +758,6 @@ video {
 
 .opacity-70 {
   opacity: 0.7;
-}
-
-.opacity-75 {
-  opacity: 0.75;
 }
 
 .shadow-lg {
@@ -876,4 +818,329 @@ h6 {
 
 .hover\:fill-white:hover {
   fill: hsl(0, 100%, 100%);
+}
+
+@media (min-width: 768px) {
+  .md\:mx-\[4\.45rem\] {
+    margin-left: 4.45rem;
+    margin-right: 4.45rem;
+  }
+
+  .md\:mx-\[3\.3rem\] {
+    margin-left: 3.3rem;
+    margin-right: 3.3rem;
+  }
+
+  .md\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .md\:mb-\[5\.38rem\] {
+    margin-bottom: 5.38rem;
+  }
+
+  .md\:mt-\[3\.4rem\] {
+    margin-top: 3.4rem;
+  }
+
+  .md\:mt-\[3rem\] {
+    margin-top: 3rem;
+  }
+
+  .md\:mt-\[3\.3rem\] {
+    margin-top: 3.3rem;
+  }
+
+  .md\:mt-\[3\.5rem\] {
+    margin-top: 3.5rem;
+  }
+
+  .md\:mt-\[2\.9rem\] {
+    margin-top: 2.9rem;
+  }
+
+  .md\:mt-\[2\.7rem\] {
+    margin-top: 2.7rem;
+  }
+
+  .md\:mt-\[2\.8rem\] {
+    margin-top: 2.8rem;
+  }
+
+  .md\:mt-\[2\.85rem\] {
+    margin-top: 2.85rem;
+  }
+
+  .md\:ml-\[3\.3rem\] {
+    margin-left: 3.3rem;
+  }
+
+  .md\:mb-\[1rem\] {
+    margin-bottom: 1rem;
+  }
+
+  .md\:mb-\[1\.5rem\] {
+    margin-bottom: 1.5rem;
+  }
+
+  .md\:mb-\[1\.4rem\] {
+    margin-bottom: 1.4rem;
+  }
+
+  .md\:mt-\[1\.5rem\] {
+    margin-top: 1.5rem;
+  }
+
+  .md\:mt-\[1\.55rem\] {
+    margin-top: 1.55rem;
+  }
+
+  .md\:grid {
+    display: grid;
+  }
+
+  .md\:h-\[31\.6rem\] {
+    height: 31.6rem;
+  }
+
+  .md\:h-\[30rem\] {
+    height: 30rem;
+  }
+
+  .md\:w-\[13\.05rem\] {
+    width: 13.05rem;
+  }
+
+  .md\:w-10 {
+    width: 2.5rem;
+  }
+
+  .md\:w-36 {
+    width: 9rem;
+  }
+
+  .md\:w-\[3rem\] {
+    width: 3rem;
+  }
+
+  .md\:w-\[5rem\] {
+    width: 5rem;
+  }
+
+  .md\:w-\[10rem\] {
+    width: 10rem;
+  }
+
+  .md\:w-\[15rem\] {
+    width: 15rem;
+  }
+
+  .md\:w-\[13rem\] {
+    width: 13rem;
+  }
+
+  .md\:w-\[12rem\] {
+    width: 12rem;
+  }
+
+  .md\:w-\[12\.5rem\] {
+    width: 12.5rem;
+  }
+
+  .md\:w-\[12\.8rem\] {
+    width: 12.8rem;
+  }
+
+  .md\:w-\[12\.6rem\] {
+    width: 12.6rem;
+  }
+
+  .md\:grid-flow-col {
+    grid-auto-flow: column;
+  }
+
+  .md\:grid-cols-\[auto_1fr\] {
+    grid-template-columns: auto 1fr;
+  }
+
+  .md\:place-items-start {
+    place-items: start;
+  }
+
+  .md\:content-start {
+    align-content: flex-start;
+  }
+
+  .md\:items-start {
+    align-items: flex-start;
+  }
+
+  .md\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .md\:justify-items-start {
+    justify-items: start;
+  }
+
+  .md\:self-start {
+    align-self: flex-start;
+  }
+
+  .md\:bg-softMagenta {
+    --tw-bg-opacity: 1;
+    background-color: hsl(300 69% 71% / var(--tw-bg-opacity));
+  }
+
+  .md\:py-\[1rem\] {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .md\:py-\[1\.5rem\] {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+  .md\:py-\[1\.4rem\] {
+    padding-top: 1.4rem;
+    padding-bottom: 1.4rem;
+  }
+
+  .md\:py-\[1\.3rem\] {
+    padding-top: 1.3rem;
+    padding-bottom: 1.3rem;
+  }
+
+  .md\:py-\[1\.25rem\] {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+  }
+
+  .md\:pr-1 {
+    padding-right: 0.25rem;
+  }
+
+  .md\:pr-2 {
+    padding-right: 0.5rem;
+  }
+
+  .md\:pr-3 {
+    padding-right: 0.75rem;
+  }
+
+  .md\:pr-4 {
+    padding-right: 1rem;
+  }
+
+  .md\:text-left {
+    text-align: left;
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .md\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .md\:text-\[2\.25rem\] {
+    font-size: 2.25rem;
+  }
+
+  .md\:text-\[2\.4rem\] {
+    font-size: 2.4rem;
+  }
+
+  .md\:text-\[2\.5rem\] {
+    font-size: 2.5rem;
+  }
+
+  .md\:text-\[2\.6rem\] {
+    font-size: 2.6rem;
+  }
+
+  .md\:text-\[2\.55rem\] {
+    font-size: 2.55rem;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-\[1\.2rem\] {
+    font-size: 1.2rem;
+  }
+
+  .md\:text-\[1\.1rem\] {
+    font-size: 1.1rem;
+  }
+
+  .md\:text-\[1\.15rem\] {
+    font-size: 1.15rem;
+  }
+
+  .md\:text-\[1rem\] {
+    font-size: 1rem;
+  }
+
+  .md\:text-\[1\.5rem\] {
+    font-size: 1.5rem;
+  }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .md\:leading-\[2rem\] {
+    line-height: 2rem;
+  }
+
+  .md\:leading-\[2\.5rem\] {
+    line-height: 2.5rem;
+  }
+
+  .md\:leading-\[3rem\] {
+    line-height: 3rem;
+  }
+
+  .md\:leading-\[3\.5rem\] {
+    line-height: 3.5rem;
+  }
+
+  .md\:leading-\[3\.55rem\] {
+    line-height: 3.55rem;
+  }
+
+  .md\:leading-\[3\.6rem\] {
+    line-height: 3.6rem;
+  }
+
+  .md\:leading-\[1\.5rem\] {
+    line-height: 1.5rem;
+  }
+
+  .md\:leading-\[1\.7rem\] {
+    line-height: 1.7rem;
+  }
+
+  .md\:leading-\[1\.65rem\] {
+    line-height: 1.65rem;
+  }
 }
