--- a/public/output-style.css
+++ b/public/output-style.css
@@ -603,6 +603,18 @@ video {
   margin-bottom: 1.4rem;
 }
 
+.mb-\[3\.5rem\] {
+  margin-bottom: 3.5rem;
+}
+
+.mb-\[1rem\] {
+  margin-bottom: 1rem;
+}
+
+.mb-\[0\.5rem\] {
+  margin-bottom: 0.5rem;
+}
+
 .grid {
   display: grid;
 }
@@ -643,16 +655,24 @@ video {
   grid-auto-rows: auto;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .gap-\[0\.5rem\] {
   gap: 0.5rem;
+}
+
+.place-self-end {
+  place-self: end;
 }
 
 .place-self-center {
   place-self: center;
 }
 
-.self-center {
-  align-self: center;
+.justify-self-end {
+  justify-self: end;
 }
 
 .rounded-full {
@@ -714,9 +734,9 @@ video {
   text-align: center;
 }
 
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-base {
@@ -727,11 +747,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .font-600 {
@@ -826,11 +841,6 @@ h6 {
     margin-right: 4.45rem;
   }
 
-  .md\:mx-\[3\.3rem\] {
-    margin-left: 3.3rem;
-    margin-right: 3.3rem;
-  }
-
   .md\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
@@ -844,56 +854,152 @@ h6 {
     margin-top: 3.4rem;
   }
 
-  .md\:mt-\[3rem\] {
-    margin-top: 3rem;
+  .md\:ml-\[3\.3rem\] {
+    margin-left: 3.3rem;
   }
 
-  .md\:mt-\[3\.3rem\] {
-    margin-top: 3.3rem;
-  }
-
-  .md\:mt-\[3\.5rem\] {
-    margin-top: 3.5rem;
+  .md\:mb-\[1\.2rem\] {
+    margin-bottom: 1.2rem;
   }
 
   .md\:mt-\[2\.9rem\] {
     margin-top: 2.9rem;
   }
 
-  .md\:mt-\[2\.7rem\] {
-    margin-top: 2.7rem;
-  }
-
-  .md\:mt-\[2\.8rem\] {
-    margin-top: 2.8rem;
-  }
-
-  .md\:mt-\[2\.85rem\] {
-    margin-top: 2.85rem;
-  }
-
-  .md\:ml-\[3\.3rem\] {
-    margin-left: 3.3rem;
+  .md\:mt-\[1\.55rem\] {
+    margin-top: 1.55rem;
   }
 
   .md\:mb-\[1rem\] {
     margin-bottom: 1rem;
   }
 
-  .md\:mb-\[1\.5rem\] {
-    margin-bottom: 1.5rem;
-  }
-
   .md\:mb-\[1\.4rem\] {
     margin-bottom: 1.4rem;
   }
 
-  .md\:mt-\[1\.5rem\] {
-    margin-top: 1.5rem;
+  .md\:mb-\[5rem\] {
+    margin-bottom: 5rem;
   }
 
-  .md\:mt-\[1\.55rem\] {
-    margin-top: 1.55rem;
+  .md\:mb-\[4\.5rem\] {
+    margin-bottom: 4.5rem;
+  }
+
+  .md\:mb-\[4rem\] {
+    margin-bottom: 4rem;
+  }
+
+  .md\:mb-\[3\.5rem\] {
+    margin-bottom: 3.5rem;
+  }
+
+  .md\:mb-\[3\.3rem\] {
+    margin-bottom: 3.3rem;
+  }
+
+  .md\:mb-\[3rem\] {
+    margin-bottom: 3rem;
+  }
+
+  .md\:mb-\[2\.5rem\] {
+    margin-bottom: 2.5rem;
+  }
+
+  .md\:mb-\[2\.6rem\] {
+    margin-bottom: 2.6rem;
+  }
+
+  .md\:mb-\[2\.7rem\] {
+    margin-bottom: 2.7rem;
+  }
+
+  .md\:mt-5 {
+    margin-top: 1.25rem;
+  }
+
+  .md\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
+  .md\:mt-\[5rem\] {
+    margin-top: 5rem;
+  }
+
+  .md\:mt-\[10rem\] {
+    margin-top: 10rem;
+  }
+
+  .md\:mt-\[11rem\] {
+    margin-top: 11rem;
+  }
+
+  .md\:mt-\[12rem\] {
+    margin-top: 12rem;
+  }
+
+  .md\:mt-\[13rem\] {
+    margin-top: 13rem;
+  }
+
+  .md\:mt-\[3\.5rem\] {
+    margin-top: 3.5rem;
+  }
+
+  .md\:mt-\[4rem\] {
+    margin-top: 4rem;
+  }
+
+  .md\:mt-\[6rem\] {
+    margin-top: 6rem;
+  }
+
+  .md\:mt-\[7rem\] {
+    margin-top: 7rem;
+  }
+
+  .md\:mt-\[1rem\] {
+    margin-top: 1rem;
+  }
+
+  .md\:mb-\[5\.5rem\] {
+    margin-bottom: 5.5rem;
+  }
+
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .md\:mt-\[3\.3rem\] {
+    margin-top: 3.3rem;
+  }
+
+  .md\:mb-\[5\.3rem\] {
+    margin-bottom: 5.3rem;
+  }
+
+  .md\:mb-\[4\.8rem\] {
+    margin-bottom: 4.8rem;
+  }
+
+  .md\:mb-\[4\.7rem\] {
+    margin-bottom: 4.7rem;
+  }
+
+  .md\:mt-\[10\.9rem\] {
+    margin-top: 10.9rem;
+  }
+
+  .md\:mt-\[11\.3rem\] {
+    margin-top: 11.3rem;
+  }
+
+  .md\:mb-\[4\.2rem\] {
+    margin-bottom: 4.2rem;
+  }
+
+  .md\:mb-\[2\.9rem\] {
+    margin-bottom: 2.9rem;
   }
 
   .md\:grid {
@@ -904,56 +1010,20 @@ h6 {
     height: 31.6rem;
   }
 
-  .md\:h-\[30rem\] {
-    height: 30rem;
+  .md\:h-10 {
+    height: 2.5rem;
   }
 
   .md\:w-\[13\.05rem\] {
     width: 13.05rem;
   }
 
-  .md\:w-10 {
-    width: 2.5rem;
-  }
-
-  .md\:w-36 {
-    width: 9rem;
-  }
-
-  .md\:w-\[3rem\] {
-    width: 3rem;
-  }
-
-  .md\:w-\[5rem\] {
-    width: 5rem;
-  }
-
-  .md\:w-\[10rem\] {
-    width: 10rem;
-  }
-
-  .md\:w-\[15rem\] {
-    width: 15rem;
-  }
-
-  .md\:w-\[13rem\] {
-    width: 13rem;
-  }
-
-  .md\:w-\[12rem\] {
-    width: 12rem;
-  }
-
-  .md\:w-\[12\.5rem\] {
-    width: 12.5rem;
-  }
-
-  .md\:w-\[12\.8rem\] {
-    width: 12.8rem;
-  }
-
   .md\:w-\[12\.6rem\] {
     width: 12.6rem;
+  }
+
+  .md\:w-10 {
+    width: 2.5rem;
   }
 
   .md\:grid-flow-col {
@@ -964,53 +1034,24 @@ h6 {
     grid-template-columns: auto 1fr;
   }
 
-  .md\:place-items-start {
-    place-items: start;
-  }
-
   .md\:content-start {
     align-content: flex-start;
   }
 
-  .md\:items-start {
-    align-items: flex-start;
+  .md\:p-\[0\.4rem\] {
+    padding: 0.4rem;
   }
 
-  .md\:justify-start {
-    justify-content: flex-start;
+  .md\:p-\[0\.45rem\] {
+    padding: 0.45rem;
   }
 
-  .md\:justify-items-start {
-    justify-items: start;
+  .md\:p-\[0\.5rem\] {
+    padding: 0.5rem;
   }
 
-  .md\:self-start {
-    align-self: flex-start;
-  }
-
-  .md\:bg-softMagenta {
-    --tw-bg-opacity: 1;
-    background-color: hsl(300 69% 71% / var(--tw-bg-opacity));
-  }
-
-  .md\:py-\[1rem\] {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-  }
-
-  .md\:py-\[1\.5rem\] {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-  }
-
-  .md\:py-\[1\.4rem\] {
-    padding-top: 1.4rem;
-    padding-bottom: 1.4rem;
-  }
-
-  .md\:py-\[1\.3rem\] {
-    padding-top: 1.3rem;
-    padding-bottom: 1.3rem;
+  .md\:p-\[0\.55rem\] {
+    padding: 0.55rem;
   }
 
   .md\:py-\[1\.25rem\] {
@@ -1018,64 +1059,16 @@ h6 {
     padding-bottom: 1.25rem;
   }
 
-  .md\:pr-1 {
-    padding-right: 0.25rem;
-  }
-
-  .md\:pr-2 {
-    padding-right: 0.5rem;
-  }
-
-  .md\:pr-3 {
-    padding-right: 0.75rem;
-  }
-
-  .md\:pr-4 {
-    padding-right: 1rem;
-  }
-
   .md\:text-left {
     text-align: left;
   }
 
-  .md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
-  .md\:text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
-  }
-
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .md\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
-  .md\:text-\[2\.25rem\] {
-    font-size: 2.25rem;
-  }
-
-  .md\:text-\[2\.4rem\] {
-    font-size: 2.4rem;
-  }
-
-  .md\:text-\[2\.5rem\] {
-    font-size: 2.5rem;
-  }
-
-  .md\:text-\[2\.6rem\] {
-    font-size: 2.6rem;
-  }
-
   .md\:text-\[2\.55rem\] {
     font-size: 2.55rem;
+  }
+
+  .md\:text-\[1\.15rem\] {
+    font-size: 1.15rem;
   }
 
   .md\:text-lg {
@@ -1083,61 +1076,16 @@ h6 {
     line-height: 1.75rem;
   }
 
-  .md\:text-\[1\.2rem\] {
-    font-size: 1.2rem;
-  }
-
   .md\:text-\[1\.1rem\] {
     font-size: 1.1rem;
   }
 
-  .md\:text-\[1\.15rem\] {
-    font-size: 1.15rem;
-  }
-
-  .md\:text-\[1rem\] {
-    font-size: 1rem;
-  }
-
-  .md\:text-\[1\.5rem\] {
-    font-size: 1.5rem;
-  }
-
-  .md\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
-  .md\:leading-\[2rem\] {
-    line-height: 2rem;
-  }
-
-  .md\:leading-\[2\.5rem\] {
-    line-height: 2.5rem;
-  }
-
-  .md\:leading-\[3rem\] {
-    line-height: 3rem;
-  }
-
-  .md\:leading-\[3\.5rem\] {
-    line-height: 3.5rem;
-  }
-
-  .md\:leading-\[3\.55rem\] {
-    line-height: 3.55rem;
+  .md\:text-\[1\.16rem\] {
+    font-size: 1.16rem;
   }
 
   .md\:leading-\[3\.6rem\] {
     line-height: 3.6rem;
-  }
-
-  .md\:leading-\[1\.5rem\] {
-    line-height: 1.5rem;
-  }
-
-  .md\:leading-\[1\.7rem\] {
-    line-height: 1.7rem;
   }
 
   .md\:leading-\[1\.65rem\] {
